--- a/_posts/2017-05-16-bobart.md
+++ b/_posts/2017-05-16-bobart.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 subtitle: C'est un vrai bar ? Oui, mais à plantes ! Et pas que.
-hero_img: img/Front Bobart-2.jpg
+hero_img: img/Front-Bobart-2.jpg
 tags:
 - déco
 comments: 'true'
